# YOOS-VIL

./: .gitignore  AI_COORDINATION.md  Makefile  QWEN_STATUS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  yo_adaptive_filter.py  yo_unsplash.py  yo_yoldaolmak_filter.py
.github/workflows/: ci.yml
docs/: architecture.md  installation.md  security.md  usage.md
ops/: README.md  download_licensed_deposit_assets.py  extract_apple_photos_ml.py  index_memory_daily.py  index_vil.py  repair_image_placement.py  repair_turkish_media_meta.py  run_deposit.py  vision_budget.py  yoos_vil_health.py
scripts/: build_destination_index.py  com.pictova.server.plist  fast_scan.py  vision_scan_batch.py
src/: main.py
src/core/: README.md  database.py  filter.py  media_publish.py  media_quality.py  metadata_generator.py  processor.py  selection.py
src/pictova/app/: api.py  server.py
src/pictova/engine/: selector.py  vision_chain.py
src/services/: wordpress.py
src/utils/: README.md  __init__.py  config.py
src/vil/: __init__.py  config.py
src/vil/app/: __init__.py  api.py  cli.py  health.py  jobs.py  server.py  state.py
src/vil/engine/: __init__.py  attach.py  gallery.py  metadata.py  processor.py  publisher.py  quality.py  selector.py
src/vil/profiles/: __init__.py  yoldaolmak.py
src/vil/providers/: __init__.py  wordpress.py
src/visual_memory/: __init__.py  deposit_config.py  models.py
tests/: README.md
tests/integration/: test_cli_contract.py
tests/unit/: test_core_modules.py  test_metadata.py  test_selector.py  test_vision_chain.py
